# turbomoleio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.rst  README.md  README.rst  conftest.py  pyproject.toml  pytest.ini  runtests.sh  setup.py  tasks.py
.github/: dependabot.yml
.github/workflows/: main_ci.yml
dev_scripts/: generate_output_files.py
docs/: Makefile  appendix.html  bugs.html  changelog.html  coord.html  datagroups.html  definerunner.html  genindex.html  index.html  license.html  objects.inv  output_parsing.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/cerberus/: validator.html
docs/_modules/turbomoleio/: testing.html
docs/_modules/turbomoleio/core/: base.html  utils.html  (+4 more)
docs/_sources/: appendix.rst.txt  changelog.rst.txt  coord.rst.txt  definerunner.rst.txt  index.rst.txt  license.rst.txt  output_parsing.rst.txt
docs/_sources/api/: turbomoleio.core.rst.txt  turbomoleio.core.tests.rst.txt  turbomoleio.input.rst.txt  turbomoleio.input.templates.rst.txt  turbomoleio.output.rst.txt  turbomoleio.output.tests.rst.txt  turbomoleio.rst.txt  turbomoleio.testing.rst.txt
docs/_sources/developer/: definerunner.rst.txt  introduction.rst.txt  parsing_logs.rst.txt  testing.rst.txt  versioning.rst.txt
docs/api/: modules.html  turbomoleio.core.html  turbomoleio.core.rst  turbomoleio.core.tests.html  turbomoleio.core.tests.rst  turbomoleio.html  turbomoleio.input.html  turbomoleio.input.rst  turbomoleio.input.templates.html  turbomoleio.input.templates.rst  turbomoleio.input.tests.html  turbomoleio.input.tests.rst  turbomoleio.output.html  turbomoleio.output.rst  turbomoleio.output.tests.html  turbomoleio.output.tests.rst  turbomoleio.rst  turbomoleio.testfiles.html  turbomoleio.testfiles.rst  turbomoleio.testing.html
docs/developer/: definerunner.html  definerunner.rst  introduction.html  parsing_logs.html  testing.html  testing.rst  versioning.html  versioning.rst
docs/html/: .buildinfo  appendix.html  coord.html  datagroups.html  definerunner.html  genindex.html  index.html  objects.inv  output_parsing.html  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_sources/: definerunner.rst.txt
docs/html/api/: modules.html  turbomoleio.core.html  turbomoleio.core.tests.html  turbomoleio.html  turbomoleio.input.html  turbomoleio.input.templates.html  turbomoleio.input.tests.html  turbomoleio.output.html  turbomoleio.output.tests.html  turbomoleio.testfiles.html
docs/html/developer/: definerunner.html  introduction.html  parsing_logs.html  testing.html  versioning.html
docs_rst/: Makefile  appendix.rst  bugs.rst  changelog.rst  conf.py  coord.rst  datagroups.rst  definerunner.rst  generate_api.sh  index.rst  license.rst  output_parsing.rst
docs_rst/api/: modules.rst  turbomoleio.core.rst  turbomoleio.input.rst  turbomoleio.input.tests.rst  turbomoleio.testfiles.rst
docs_rst/developer/: definerunner.rst  introduction.rst  parsing_logs.rst  testing.rst  versioning.rst
requirements/: requirements.txt
src/turbomoleio/: __init__.py  _version.py
src/turbomoleio/core/: __init__.py  control.py  datagroups.py  molecule.py  periodic.py  utils.py
src/turbomoleio/input/: __init__.py  define.py  utils.py
src/turbomoleio/output/: data.py  files.py  parser.py  states.py
src/turbomoleio/testing/: __init__.py
tests/: __init__.py  conftest.py  test_testing.py  test_version.py
tests/core/: test_base.py  test_control.py  test_datagroups.py  test_molecule.py  test_periodic.py  test_utils.py
tests/input/: __init__.py  test_define.py  test_templates.py  test_utils.py
tests/integration_tests/: __init__.py  test_aoforce.py  test_datagroups.py  test_define.py  test_dscf.py  test_escf.py  test_jobex.py  test_molecule.py  test_relax.py  test_ridft.py  test_rimp2.py  test_riper.py
tests/output/: __init__.py  test_data.py  test_files.py  test_parser.py  test_states.py
tests/test_data/control/: control_test-Control  control_test-energy  control_test-gradient  control_test-subfiles  coord_test-subfiles  dscf_disp_DFT-D1  dscf_disp_DFT-D2  dscf_disp_DFT-D3  energy_test-energy  energy_test-mp2  periodic_1D_C_chain.control  periodic_1D_C_chain.coord  periodic_1D_C_chain.energy  periodic_1D_C_chain.gradient  periodic_2D_graphene.control  periodic_2D_graphene.energy  periodic_2D_graphene.gradient  periodic_3D_HC.control  periodic_3D_HC.coord  periodic_3D_HC.energy  periodic_3D_HC.gradient
tests/test_data/define/: define-qq.log_V7.3.1  define-qq.log_V7.4.1  define-qq.log_V7.5.1
tests/test_data/structures/: LiH  LiH.json  SiO2.json  SiO2_rotated.json  aceton  ch4_fixed_ired_not_conv  co2.json  disordered_mol.json  graphene  graphene.json  h2o  h2o_fixed_coords  h2o_natoms  h3cbr  he  methanol  nh3  nh3_wrong_internal  sih4
turbomoleio/: __init__.py  __version__.py
turbomoleio/core/: base.py  control.py  datagroups.py  molecule.py  periodic.py  symmetry.py  utils.py
turbomoleio/core/tests/: __init__.py  test_control.py  test_datagroups.py  test_molecule.py  test_periodic.py  test_utils.py
turbomoleio/input/: define.py  utils.py
turbomoleio/input/templates/: dscf.yaml  dscf_escf.yaml  ridft.yaml  ridft_escf.yaml  ridft_rimp2.yaml
turbomoleio/input/tests/: test_define.py  test_utils.py
turbomoleio/integration_tests/: test_aoforce.py  test_datagroups.py  test_define.py  test_dscf.py  test_escf.py  test_jobex.py  test_molecule.py  test_relax.py  test_ridft.py  test_rimp2.py  test_riper.py
turbomoleio/output/: __init__.py  data.py  files.py  parser.py  states.py
turbomoleio/output/tests/: test_data.py  test_files.py  test_parser.py  test_states.py
turbomoleio/testfiles/: __init__.py  utils.py
turbomoleio/testfiles/control/: basis_test-subfiles  control_itest-molecule  dscf_disp_DFT-D3_BJ  energy_test-subfiles  gradient_test-gradient  mos_test-subfiles  periodic_2D_graphene.coord
turbomoleio/testfiles/define/: define-qq.log_V7.2
turbomoleio/testfiles/structures/: ch4  ch4.json  h2o_dummy_atom  phenol  sf4
turbomoleio/testfiles/tests/: test_utils.py
(+1489 files in other folders)
