[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbomoleio"
description = """\
Turbomoleio is a python package containing a set of tools \
for the generation of inputs and parsing of outputs for \
TURBOMOLE."""
readme = "README.rst"
keywords = []
license = { text = "GPL V3" }
authors = [
    { name = "Guido Petretto", email = "guido.petretto@matgenix.com" },
    { name = "David Waroquiers", email = "david.waroquiers@matgenix.com" }
]
version = "1.5.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies =[
    "numpy >= 1.16.5, < 2",
    "matplotlib >= 3.5.1",
    "pandas >= 1.4.1",
    "pymatgen >= 2022.2.10",
    "monty >= 2022.1.19",
    "pexpect >= 4.8.0",
    "cerberus >= 1.3.4"
]

[project.optional-dependencies]
dev = [
    "pytest >= 6.2.3",
    "pytest-cov >= 2.11.1",
    "coverage[toml] >= 5.5",
    "pytest-mock >= 3.3.1",
    "pre-commit >= 2.9.3",
    "isort >= 5.6.4",
    "black >= 20.8b1",
    "flake8 >= 3.8.4",
    "pylint >= 2.6.0",
    "pydocstyle >= 6.1.1",
    "mypy >= 0.790",
    "invoke >= 1.6"
]

[tool.setuptools.package-data]
"turbomoleio.input.templates" = ["*.yaml"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "8.0.2"
addopts = "--strict-markers --cov=turbomoleio --cov-config=pyproject.toml --cov-report=html --cov-report=term"
markers = [
    "unit: Unit tests on small portions of the code that do not require execution of external code.",
    "integration: Integration tests that require running turbomole executables.",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 100




## Coverage options
#[tool.coverage.run]
#source = ["turbomoleio"]
##omit = [
##    "*/test_*",
##]
#branch = true
#
#[tool.coverage.report]
#exclude_lines = [
#    "pragma: no cover",
#    "raise NotImplementedError",
#]
#fail_under = 100

[tool.coverage.html]
directory = "htmlcov"
